# server

./: .env  Cargo.toml  README.md  Rocket.toml  docker-compose.yml  init.sql
src/: main.rs  models.rs  routes.rs  schema.rs
