[package]
name = "server"
version = "0.1.0"
authors = ["Nick Robinson <nro2@pdx.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.3"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
diesel_cli_ext = "0.3.5"