[package]
name = "server"
version = "0.1.0"
authors = ["Nick Robinson <nro2@pdx.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.3"
diesel = { version = "1.0.0", features = ["postgres", "chrono"] }
dotenv = "0.9.0"
diesel_cli_ext = "0.3.5"
chrono = { version = "0.4.11", features = ["serde"] }
rocket_contrib = { version = "0.4.0", features = ["json", "diesel_postgres_pool"] }
serde_json = "1.0.39"
serde = "1.0.90"
serde_derive = "1.0.90"